footer no longer stuck because of fast mouse

--- a/src/footer/Footer.css
+++ b/src/footer/Footer.css
@@ -28,3 +28,7 @@
     padding: 0;
     display: block;
 }
+
+#footer-trigger:hover + #contact-details, #contact-details:hover {
+    transform: translate(0, -100%);
+}
